main.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');

*{
    font-family: Poppins, sans-serif;    
}

.logo-letter, .logo-symbol{
    padding: 10px 0px 10px 7px;
}

.logo-symbol{
    max-height: 60px;
}

.logo-letter{
    max-height: 60px;
}

header{
    position: fixed;
    z-index: 1000;
    transition: 1;
}

.navbar {
    background: #33B8B8;
    transition: 1;
    
}

#cabecalho .nav .nav-link.active {
    background-color: #fff;
    color: #33B8B8;
}

#cabecalho .nav .nav-link,
.navbar-brand,
.navbar-brand:hover,
.nav-cardapio .nav-link.active:hover {
    color: #fff;
}

.black-overlay {
    position: absolute;
    top: 0px;
    left: 0px;
    height: 100%;
    width: 100%;
    background: rgba(0, 0, 0, 0.8);
}

.carousel-item {
    position: relative !important;
}

.carousel-item img {
    width: 100%;
    max-height: 762px;
    object-fit: cover;
}

.carousel-caption h1 {
    font-weight: 900;
    
}

.carousel-caption p{
    margin-top: 80px;
}

.carousel-item a{
    position: absolute;
    top: 0;
    z-index: -1;
    filter: brightness(0.6);
}

.anchor {
    display: block;
    visibility: hidden;
    margin-bottom: 100px;
}

.partially_transparent {

    color: rgba(255, 255, 255, 0.8);
}

.navbar-scrolled {
    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.6);
}

.navbar-toggler {
    background-color: #fff;
}

.section-title {
    font-family: Poppins, sans-serif;
}

#sobre-o-restaurante, #cardapio {
    background-color: #7aeeee;
}

.text-colored {
    color: #33B8B8;
}

.nav-cardapio .nav-link.active,
#fale-conosco button {
    background-color: #fff;
    color: #33B8B8;
}

#cardapio h2 {
    color: #fff;
}

.nav-cardapio .nav-link {
    color: #fff;
}

.nav-cardapio .nav-link.active:hover {
    color: #0c6161;
}

.nav-cardapio .nav-link:hover {
    color: #0c6161;
}

.social-links li {
    list-style: none;
    display: inline;
}

.social-links a {
    text-decoration: none;
}

.card {
    border: none;
    padding: 16px;
    border-radius: 16px;
    background: #ffffff;
    box-shadow:  5px 5px 10px #33B8B8, -5px -5px 10px #33B8B8;
    margin-bottom: 10px;
}


.card-button {
    font-family: Poppins, sans-serif;
    border: none;
    border-radius: 8px;
    background-color: #33B8B8;
    color: #fff;
    font-weight: 500;
    height: 35px;
    margin-top: 16px;
}

.card-button a {
    text-decoration: none;
    color: #fff;
}

.card-button:hover {
    background-color: #0c6161;
}

.card-button i {
    margin-left: 3px;
}

#kids img {
    border-radius: 16px;
}

#idiomas img {
    border-radius: 16px;
}

#graduacoes img {
    border-radius: 16px;
}

#cursos-profissionalizantes img {
    border-radius: 16px;
}

.google-map {
     padding-bottom: 50%;
     position: relative;
}

.google-map iframe {
     height: 100%;
     width: 100%;
     left: 0;
     top: 0;
     position: absolute;
}

svg {
    margin-bottom: -1px;
    margin-top: -1px;
}

footer {
    background-color: #7aeeee;
    color: #fff;
    height: 80px;
    font-weight: bold;
}

.animate__animated.animate__fadeInRight {
    --animate-duration: 650ms
}

@media (max-width: 767px) {
    .carousel-item img {
        height: 280px;
    }

    .carousel-caption {
        justify-content: center;
    }

    .carousel-caption button {
        display: none;
    }

    .carousel-caption h1 {
        font-weight: 900;
        color: rgba(255, 255, 255, 0.9);
    }
    
    .carousel-caption p{
       display: none;
    }

    .card {
        margin-right: 5px;
    }

    footer {
        text-align: center;
    }

    .anchor {
        display: none;
        
    }
    #menu-navegacao {
        -webkit-animation: none !important;
        -moz-animation: none !important;
        -ms-animation: none !important;
        animation: none !important;
        }
}

@media (min-width: 768px) and (max-width: 991px) {
    .middle-card {
        margin-left: 10px;
        margin-right: 0px;
    }

    .carousel-caption a {
        display: contents;
    }

    .carousel-caption button {
        display: none;
    }

    .carousel-caption p {
        margin-bottom: 80px;
    }

    .carousel-caption h1{
        padding-top: 80px;
    }

    .carousel-caption img {
        width: 32px;
    }

    .card {
        border: none;
        padding: 16px;
        border-radius: 16px;
        background: #ffffff;
        box-shadow:  5px 5px 10px #33B8B8, -5px -5px 10px #33B8B8;
        margin-bottom: 10px;
        min-width: 190px;
    }
    
    .card p {
        padding-top: 16px;
    }

    .card h5 {
        min-height: 96px;
    }
    
    .card i {
        display: none;
    }
    
    .card-button {
        font-family: Poppins, sans-serif;
        border: none;
        border-radius: 8px;
        background-color: #33B8B8;
        color: #fff;
        font-weight: 500;
        height: 35px;
        margin-top: 16px;
    }
    
    .card-button a {
        text-decoration: none;
        color: #fff;
    }
    
    .card-button:hover {
        background-color: #0c6161;
    }
    
    .card-button i {
        margin-left: 3px;
    }

    #nrs h5 {
        min-height: 192px;
    }

    .nav-cardapio button {
        
        padding-left: 5px;
        font-size: 0.7em;
    }

    aside {
        margin-left: -16px;
    }
    
    #kids .descricao {
        min-height: 72px;
    }

    #idiomas .descricao {
        min-height: 72px;
    }

    #cursos-profissionalizantes .descricao {
        min-height: 72px;
    }

    #menu-navegacao {
        -webkit-animation: none !important;
        -moz-animation: none !important;
        -ms-animation: none !important;
        animation: none !important;
        }
}

@media (min-width: 992px) and (max-width: 1195px) {
    .middle-card {
        margin-left: 10px;
        margin-right: 0px;
    }

    .carousel-caption a {
        display: contents;
    }

    .carousel-caption button {
        border: none;
    }

    .carousel-caption p {
        margin-bottom: 60px;
    }

    .carousel-caption h1{
        padding-top: 80px;
    }

    .carousel-caption img {
        width: 32px;
    }

    .card {
        border: none;
        padding: 16px;
        border-radius: 16px;
        background: #ffffff;
        box-shadow:  5px 5px 10px #33B8B8, -5px -5px 10px #33B8B8;
        margin-bottom: 10px;
    }
    
    .card p {
        padding-top: 16px;
    }

    .card h5 {
        min-height: 96px;
    }
    
    .card-button {
        font-family: Poppins, sans-serif;
        border: none;
        border-radius: 8px;
        background-color: #33B8B8;
        color: #fff;
        font-weight: 500;
        height: 35px;
        margin-top: 16px;
    }
    
    .card-button a {
        text-decoration: none;
        color: #fff;
    }
    
    .card-button:hover {
        background-color: #0c6161;
    }
    
    .card-button i {
        margin-left: 3px;
    }

   

    #nrs h5{
        min-height: 192px;
    }
    
    .nav-cardapio button {
        
        padding-left: 5px;
        font-size: 0.9em;
    }

    aside {
        margin-left: -16px;
    }
    
    #kids .descricao {
        min-height: 72px;
    }
    
    #idiomas .descricao {
        min-height: 72px;
    }

    #cursos-profissionalizantes .descricao {
        min-height: 72px;
    }
}

@media(min-width: 1196px) {

    .middle-card {
        margin-left: 10px;
        margin-right: 0px;
    }

    .carousel-caption a {
        display: contents;
    }

    .carousel-caption button {
        border: none;
    }

    .carousel-caption p {
        margin-bottom: 80px;
    }

    .carousel-caption h1{
        padding-top: 80px;
    }

    .carousel-caption img {
        width: 32px;
    }

    .card {
        border: none;
        padding: 16px;
        border-radius: 16px;
        background: #ffffff;
        box-shadow:  5px 5px 10px #33B8B8, -5px -5px 10px #33B8B8;
        margin-bottom: 10px;
    }
    
    .card p {
        padding-top: 16px;
    }

    .card h5 {
        min-height: 72px;
    }
    
    .card-button {
        font-family: Poppins, sans-serif;
        border: none;
        border-radius: 8px;
        background-color: #33B8B8;
        color: #fff;
        font-weight: 500;
        height: 35px;
        margin-top: 16px;
    }
    
    .card-button a {
        text-decoration: none;
        color: #fff;
    }
    
    .card-button:hover {
        background-color: #0c6161;
    }
    
    .card-button i {
        margin-left: 3px;
    }

    #cursos-tecnicos h5 {
        min-height: 96px;
    }

    #nrs h5 {
        min-height: 144px;
    }

    #kids .descricao {
        min-height: 47px;
    }
    
    #idiomas .descricao {
        min-height: 47px;
    }

    #cursos-profissionalizantes .descricao {
        min-height: 47px;
    }
}

@media(min-width: 2400px) {
        
    .carousel-caption h1{
        font-size: 3.5em;
        margin-top: -460px;
    }
}

